--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
+    "angular-chart.js": "^1.1.1",
     "angularfire2": "^2.0.0-beta.8",
     "firebase": "^3.7.6",
     "ionic-angular": "3.0.1",
