--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@ionic/storage": "2.0.1",
     "angular-chart.js": "^1.1.1",
     "angularfire2": "^2.0.0-beta.8",
+    "chart.js": "^2.5.0",
     "firebase": "^3.7.6",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.5.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "^0.8.4"
