--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
     "angular-chart.js": "^1.1.1",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "^2.0.0-beta.7-pre",
     "chart.js": "^2.5.0",
-    "firebase": "^3.7.6",
+    "firebase": "^3.9.0",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
     "ng2-charts": "^1.5.0",
