--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
+    "@ionic-native/camera": "^3.12.1",
     "@ionic-native/core": "3.4.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
     "angular-chart.js": "^1.1.1",
     "angularfire2": "^2.0.0-beta.7-pre",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.6.0",
     "firebase": "^3.9.0",
     "ionic-angular": "3.0.1",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
-    "ng2-charts": "^1.5.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "^0.8.4"
